# ManagementLibrary

./: .env  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_18_1321-761c0d0f7e96_add_table_user.py  2025_05_18_1322-5e97cd963f96_add_table_author.py  2025_05_18_1324-9295e78c9875_add_table_book.py  2025_05_18_1338-e8bc0666bfb9_add_table_library.py  2025_05_18_1350-eee11af4558c_create_users.py  2025_05_18_1735-b06b382b10f3_create_table_books.py  2025_05_18_1736-3494d3cf70e0_create_table_library.py  2025_05_18_1737-486c96cdc0ac_create_super_users.py  2025_05_18_1906-b261e2a8d35d_create_table_users.py  2025_05_18_1909-e756558cd218_create_table_books.py  2025_05_18_1910-158d42af6d6d_create_table_receivingbooks.py  2025_05_18_1912-f321cc85be80_add_users.py  2025_05_19_1036-2d7929d0b253_change_release_date_in_table_books.py  2025_05_19_1057-0ce3b5eb7b78_add_books.py  2025_05_20_0852-6e86df0dec95_edit_table_books_add_description.py  2025_05_20_0902-e7877d560940_edit_table_books_update_description.py
docker/: app.sh
src/: main.py
src/api_v1/: __init__.py
src/api_v1/books/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/users/: crud.py  depends.py  schemas.py  views.py
src/core/: config.py  database.py  depends.py  exceptions.py  jwt_utils.py
src/models/: author.py  base.py  book.py  library.py  user.py
tests/: conftest.py  pytest.ini  test_book_library.py  test_user.py
